<resources>
    <string name="app_name">LeoDroid</string>
    <string name="cover">Never Settle</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="NewGame">New Game</string>
    <string name="Player1">1st Player</string>
    <string name="Player2">2nd Player</string>
    <string name="Player3">3rd Player</string>
    <string name="Player4">4th Player</string>
    <string name="game_title">Game Title</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">Submit</string>
    <string name="err_msg_name"> is empty</string>
    <string name="err_minlength"> is less than 2 chars</string>
    <string name="err_maxlength"> is more than 20 chars</string>

    <string name="confirm_cancel">Discard?</string>
    <string name="confirm_cancel_content">Are you sure to dsicard? All detail will be gone</string>
    <string name="title_activity_single_game">SingleGameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="score">score</string>
    <string name="test">test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moneySign">$</string>
    <string name="round">Round</string>
    <string name="stat">Stat</string>
    <string name="more">More</string>
    <string name="new_round">New Round</string>
    <string name="score_level_unit">Fan</string>
    <string name="score_type">Type</string>
    <string name="point1">Point 1</string>
    <string name="point2">Point 2</string>
    <string name="point3">Point 3</string>
    <string name="point4">Point 4</string>
    <string name="point5">Point 5</string>
    <string name="point6">point6</string>
    <string name="point7">Point 7</string>
    <string name="summary_min_point">Input the minimum point: 1-13</string>
    <string name="summary_max_point">Input maximum point: 1-13</string>
    <string-array name="fans">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>

    </string-array>
</resources>
