<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/CV_gameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:stretchColumns="0,1,2,3">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_DGameTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_span="4"
                    android:text="@string/game_title"
                    android:textAlignment="center"
                    android:textColor="@color/dark_grey_text"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_DPlayer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLength="8"
                    android:text="@string/Player1" />

                <TextView
                    android:id="@+id/tv_DPlayer1FinalScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score" />

                <TextView
                    android:id="@+id/tv_DPlayer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLength="8"
                    android:text="@string/Player2" />

                <TextView
                    android:id="@+id/tv_DPlayer2FinalScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_DPlayer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLength="8"
                    android:text="@string/Player3" />

                <TextView
                    android:id="@+id/tv_DPlayer3FinalScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score" />

                <TextView
                    android:id="@+id/tv_DPlayer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLength="8"
                    android:text="@string/Player4" />

                <TextView
                    android:id="@+id/tv_DPlayer4FinalScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score" />

            </TableRow>
        </TableLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
