<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_names"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:background="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="1dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="5dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_name1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="5dp">

            <TextView
                android:id="@+id/tv_tbPlayer1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLength="8"
                android:text="@string/Player1"
                android:textStyle="normal|bold" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/card_view_name2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="5dp">

            <TextView
                android:id="@+id/tv_tbPlayer2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLength="8"
                android:text="@string/Player2"
                android:textStyle="normal|bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_name3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="5dp">

            <TextView
                android:id="@+id/tv_tbPlayer3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Player3"
                android:textStyle="normal|bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_name4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="5dp">

            <TextView
                android:id="@+id/tv_tbPlayer4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:ellipsize="end"
                android:maxLength="8"
                android:text="@string/Player4"
                android:textStyle="normal|bold" />
        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.v7.widget.CardView>